--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
 			width="100" height="100">
 		<img class="js-lightbox"
 			data-role="lightbox"
-			data-source="images/1-4.jpg"
-			src="images/1-4.jpg"
+			data-source="images/1-4.JPG"
+			src="images/1-4.JPG"
 			data-group="group-1"
 			data-id="ddddfdzsf"
 			data-caption="fdfsdfgfddh"
 			width="100" height="100">
 		<img class="js-lightbox"
 			data-role="lightbox"
-			data-source="images/1-5.jpg"
-			src="images/1-5.jpg"
+			data-source="images/1-5.JPG"
+			src="images/1-5.JPG"
 			data-group="group-1"
 			data-id="fgthyhj"
 			data-caption="fsaaaaa"
